Bug 438116 - First combobox in "Manage Resources" dialog lags if translations enabled
Summary: First combobox in "Manage Resources" dialog lags if translations enabled
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alvin Wong
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-05 13:24 UTC by Alvin Wong
Modified: 2021-06-10 10:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2021-06-05 13:24:18 UTC
SUMMARY

In the "Manage Resources" dialog (under "settings" menu), the first combobox dropdown lags, if translations are enabled, i.e. set to something other than "American English" (tested with "British English" and "繁體中文").

STEPS TO REPRODUCE
1. Set application language to something and restart Krita
2. Open the "Manage Resources" dialog
3. Open the first combobox and hover over stuff

OBSERVED RESULT

Lags

EXPECTED RESULT

Shouldn't lag

SOFTWARE/OS VERSIONS
Windows: 10

ADDITIONAL INFORMATION

I don't know if I was doing it right, but the lag doesn't seem to happen on nightly AppImage.
Comment 1 Tiar 2021-06-09 23:53:45 UTC
I don't see it on my system...
Comment 2 Alvin Wong 2021-06-10 06:52:47 UTC
Hmm, I just rechecked:

- The build on 4/6 (9bad11e208) produces the lag with both "British English" and "繁體中文"
- The build on 7/6 (5ff49bc367) and 9/6 (7fbe819169) produces the lag with "British English" but not with "繁體中文"

The major change seems to be that, the strings inside the combobox list for "繁體中文" went from untranslated to translated during the weekend.
Comment 3 Halla Rempt 2021-06-10 10:31:22 UTC
Git commit 66f6971d19905f8a2627560e228ac0d4b12a877d by Halla Rempt, on behalf of Alvin Wong.
Committed on 10/06/2021 at 10:31.
Pushed by rempt into branch 'master'.

Change ResourceName::resourceTypeToName to static-init the name map

M  +24   -16   libs/resources/KisResourceTypes.cpp

https://invent.kde.org/graphics/krita/commit/66f6971d19905f8a2627560e228ac0d4b12a877d