Change ResourceName::resourceTypeToName to static-init the name map

BUG: 438116